syntax = "proto3";

package envoy.config.filter.listener.original_dst.v2;

option java_outer_classname = "OriginalDstProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.filter.listener.original_dst.v2";

// [#protodoc-title: Original Dst Filter]
// Use the Original destination address on downstream(?) connections.
// [#extension: envoy.filters.listener.original_dst]

message OriginalDst {
}
